INCLUDE_DIRECTORIES(../../rts)
ADD_DEFINITIONS(-DUNICODE -D_UNICODE)

FIND_PACKAGE(Boost 1.34.0 COMPONENTS filesystem REQUIRED)

# add icon
IF (MINGW)
	ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/icon.o COMMAND ${WINDRES} -I${CMAKE_CURRENT_SOURCE_DIR} -i${CMAKE_CURRENT_SOURCE_DIR}/icon.rc -o ${CMAKE_CURRENT_BINARY_DIR}/icon.o -v)
ENDIF (MINGW)

ADD_EXECUTABLE(ArchiveMover ArchiveMover icon.o)

TARGET_LINK_LIBRARIES(ArchiveMover ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} 7zip minizip)


INSTALL (TARGETS ArchiveMover RUNTIME DESTINATION ${BINDIR})
